--- a/MedTrakBL/MedTrakBL.csproj
+++ b/MedTrakBL/MedTrakBL.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MedTrakModel\MedTrakModel.csproj" />
+    <ProjectReference Include="..\MedTrakDL\MedTrakDL.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
