--- a/MedTrakApi/MedTrakApi.csproj
+++ b/MedTrakApi/MedTrakApi.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MedTrakModel\MedTrakModel.csproj" />
+    <ProjectReference Include="..\MedTrakBL\MedTrakBL.csproj" />
+    <ProjectReference Include="..\MedTrakDL\MedTrakDL.csproj" />
   </ItemGroup>
 
 </Project>
